--- a/favorites.html
+++ b/favorites.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Favorite page">
+    <meta name="description"
+        content="Here you can see all the products you have marked as favorites. You can also remove the products from your favorites">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
     <link href="css/style.css" rel="stylesheet">
-    <title>Baby Bliss | Your Favorites</title>
+    <title>Baby Bliss | My Favorites</title>
 </head>
 
 <body>
@@ -38,23 +39,22 @@
                 <h1>Your favorites</h1>
                 <div class="loading__products"></div>
                 <div class="message__container"></div>
-                <div class="favorite__grid">
-
+                <div class="favorite__grid"></div>
+                <div class="all__products__btn__container">
+                    <a href="products.html" class="all__products__link__container">
+                        <p>View all products</p> <img src="./logo/Stork_SVG.svg" alt="Babybliss stork logo"
+                            class="logo__btn">
+                    </a>
                 </div>
-
-                <div class="all__products__link__container"></div>
             </section>
     </div>
     </main>
     </div>
     <footer>
-        <div class="footer__logo__container">
-            <a href="index.html"><img src="logo/Logo_svg.svg" alt="Baby Bliss logo" class="footer__logo"></a>
-        </div>
         <div class="footer__social__container">
-            <i class="fab fa-instagram footer__social"></i>
-            <i class="fab fa-facebook footer__social"></i>
-            <i class="fab fa-twitter footer__social"></i>
+            <i class="fab fa-instagram footer__social" aria-label="Baby Bliss instagram page"></i>
+            <i class="fab fa-facebook footer__social" aria-label="Baby Bliss facebook page"></i>
+            <i class="fab fa-twitter footer__social" aria-label="Baby Bliss twitter page"></i>
         </div>
         <div class="footer__info__container">
             <h4>Company & Customer Care</h4>
