--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Homepage">
+    <meta name="description"
+        content="Welcome to Baby Bliss, an up and coming baby accessories online boutique. We have all you need for the next baby shower or baby birthday.">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
     <link href="css/style.css" rel="stylesheet">
@@ -33,32 +34,46 @@
             </div>
         </header>
         <main>
-            <div class="loading__home"></div>
-            <div class="herobanner__container">
-                <div class="herobanner__img"></div>
-                <div class="message__container"></div>
+            <div class="loading__home__container">
+                <div class="loading__home__page">
+                    <img src="./logo/Stork_SVG.svg" alt="loading symbol" class="loading__symbol loading__symbol__one">
+                    <img src="./logo/flying_stork.svg" alt="loading symbol"
+                        class="loading__symbol loading__symbol__two">
+                </div>
             </div>
+            <div class="herobanner__container">
+            </div>
+            <div class="loading__herobanner">
+                <img src="./logo/Stork_SVG.svg" alt="loading symbol" class="loading__symbol loading__symbol__one">
+                <img src="./logo/flying_stork.svg" alt="loading symbol" class="loading__symbol loading__symbol__two">
+            </div>
+            <div class="herobanner__message__container"></div>
             <section class="container">
                 <h2>Featured products</h2>
-                <div class="loading__products"></div>
+                <div class="message__container"></div>
+                <div class="loading__products">
+                    <img src="./logo/Stork_SVG.svg" alt="loading symbol" class="loading__symbol loading__symbol__one">
+                    <img src="./logo/flying_stork.svg" alt="loading symbol"
+                        class="loading__symbol loading__symbol__two">
+                </div>
                 <div class="featured__container">
                 </div>
                 <div class="featured__message__container"></div>
-                <a href="products.html" class="all__products__link__container">
-                    <p>View all products</p> <img src="./logo/Stork_SVG.svg" alt="Babybliss stork logo"
-                        class="logo_btn">
-                </a>
+                <div class="all__products__btn__container">
+                    <a href="products.html" class="all__products__link__container">
+                        <p>View all products</p> <img src="./logo/Stork_SVG.svg" alt="Babybliss stork logo"
+                            class="logo__btn">
+                    </a>
+                </div>
             </section>
+
         </main>
     </div>
     <footer>
-        <div class="footer__logo__container">
-            <a href="index.html"><img src="logo/Logo_svg.svg" alt="Baby Bliss logo" class="footer__logo"></a>
-        </div>
         <div class="footer__social__container">
-            <i class="fab fa-instagram footer__social"></i>
-            <i class="fab fa-facebook footer__social"></i>
-            <i class="fab fa-twitter footer__social"></i>
+            <i class="fab fa-instagram footer__social" aria-label="Baby Bliss instagram page"></i>
+            <i class="fab fa-facebook footer__social" aria-label="Baby Bliss facebook page"></i>
+            <i class="fab fa-twitter footer__social" aria-label="Baby Bliss twitter page"></i>
         </div>
         <div class="footer__info__container">
             <h4>Company & Customer Care</h4>
