--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="About us page">
+    <meta name="description" content="This is the about us page. Here I explain the reason for making this website">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
     <link href="css/style.css" rel="stylesheet">
@@ -36,51 +36,52 @@
             <section class="container">
                 <div class="content__wrapper">
                     <h1>About Us</h1>
-                    <p class="intro__about">This website is made by Ørjan G. Berger as part of a school project for
-                        Noroff
-                        university</p>
-                    <div class="about__img__container"><img src="./logo/kaushal-mishra-p76UivR30oo-unsplash.jpg"
-                            alt="A baby wearing a white beanie with pink bunny ears" class="about__img"></div>
-                    <p class="about__cont">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
-                        eirmod
-                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
-                        accusam
-                        et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem
-                        ipsum
-                        dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod
-                        tempor invidunt ut labore et dolore magna aliquyam erat, sed diam</p>
-                    <div class="about__social__container">
-                        <a href="">
-                            <div class="about__social">
-                                <i class="fab fa-instagram"></i>
-                                <h5>Babyblissonline</h5>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="about__social">
-                                <i class="fab fa-facebook"></i>
-                                <h5>Babyblissonline</h5>
-                            </div>
-                        </a>
-                        <a href="">
-                            <div class="about__social">
-                                <i class="fab fa-twitter"></i>
-                                <h5>Babyblissonline</h5>
-                            </div>
-                        </a>
+                    <div class="about__grid">
+                        <p class="intro__about">This website is made by Ørjan G. Berger as part of a school project for
+                            Noroff
+                            university</p>
+                        <div class="about__img__container"><img src="./logo/kaushal-mishra-p76UivR30oo-unsplash.jpg"
+                                alt="A baby wearing a white beanie with pink bunny ears" class="about__img"></div>
+                        <p class="about__cont">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                            eirmod
+                            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et
+                            accusam
+                            et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est
+                            Lorem
+                            ipsum
+                            dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                            eirmod
+                            tempor invidunt ut labore et dolore magna aliquyam erat, sed diam</p>
+                        <div class="about__social__container">
+                            <a href="">
+                                <div class="about__social">
+                                    <i class="fab fa-instagram" aria-label="Baby Bliss instagram page"></i>
+                                    <h5>Babyblissonline</h5>
+                                </div>
+                            </a>
+                            <a href="">
+                                <div class="about__social">
+                                    <i class="fab fa-facebook" aria-label="Baby Bliss facebook page"></i>
+                                    <h5>Babyblissonline</h5>
+                                </div>
+                            </a>
+                            <a href="">
+                                <div class="about__social">
+                                    <i class="fab fa-twitter" aria-label="Baby Bliss twitter page"></i>
+                                    <h5>Babyblissonline</h5>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </section>
         </main>
     </div>
     <footer>
-        <div class="footer__logo__container">
-            <a href="index.html"><img src="logo/Logo_svg.svg" alt="Baby Bliss logo" class="footer__logo"></a>
-        </div>
         <div class="footer__social__container">
-            <i class="fab fa-instagram footer__social"></i>
-            <i class="fab fa-facebook footer__social"></i>
-            <i class="fab fa-twitter footer__social"></i>
+            <i class="fab fa-instagram footer__social" aria-label="Baby Bliss instagram page"></i>
+            <i class="fab fa-facebook footer__social" aria-label="Baby Bliss facebook page"></i>
+            <i class="fab fa-twitter footer__social" aria-label="Baby Bliss twitter page"></i>
         </div>
         <div class="footer__info__container">
             <h4>Company & Customer Care</h4>
