--- a/add_product.html
+++ b/add_product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Add product page">
+    <meta name="description" content="On this page an admin user can add products to be shown on the website">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
     <link href="css/style.css" rel="stylesheet">
@@ -46,52 +46,49 @@
                             <label for="title">Product title</label>
                             <input type="text" name="Title" id="title" class="title">
                             <p class="helper__text">Minimum 5 characters</p>
+                            <div class="title__error"></div>
                         </div>
-                        <div class="title__error"></div>
                         <div class="input__container">
                             <label for="description">Description</label>
                             <textarea name="Description" id="description" class="description"></textarea>
                             <p class="helper__text">Minimum 20 characters</p>
+                            <div class="description__error"></div>
                         </div>
-                        <div class="description__error"></div>
                         <div class="input__container">
                             <label for="price">Price</label>
                             <input type="text" name="Price" id="price" class="price">
                             <p class="helper__text">Only numbers and must have 2 decimals ex: 99.89</p>
+                            <div class="price__error"></div>
                         </div>
-                        <div class="price__error"></div>
                         <div class="input__container">
                             <label for="image">Upload image</label>
                             <input type="file" name="files.Image" id="image" class="image">
                             <p class="helper__text">Must be a JPG, JPEG or PNG image. Max 200mb</p>
+                            <div class="image__error"></div>
                         </div>
-                        <div class="image__error"></div>
                         <div class="input__container">
                             <label for="image__alt">Image alternative text</label>
                             <input type="text" name="Image_alt_text" id="image__alt" class="image__alt">
                             <p class="helper__text">Explain the image for those who can't see it!</p>
+                            <div class="image__alt__error"></div>
                         </div>
-                        <div class="image__alt__error"></div>
                         <label>Featured</label>
                         <div class="featured__icon__container">
                             <i class="fas fa-check-circle featured__yes featured__icon"></i>
                             <i class="fas fa-times-circle featured__no featured__icon"></i>
                             <input type="checkbox" name="Featured" id="featured" class="featured__checkbox">
                         </div>
-                        <button class="standard__cta__btn">Add product</button>
+                        <button class="standard__cta__btn form__btn">Add product</button>
                     </form>
                 </div>
             </section>
         </main>
     </div>
     <footer>
-        <div class="footer__logo__container">
-            <a href="index.html"><img src="logo/Logo_svg.svg" alt="Baby Bliss logo" class="footer__logo"></a>
-        </div>
         <div class="footer__social__container">
-            <i class="fab fa-instagram footer__social"></i>
-            <i class="fab fa-facebook footer__social"></i>
-            <i class="fab fa-twitter footer__social"></i>
+            <i class="fab fa-instagram footer__social" aria-label="Baby Bliss instagram page"></i>
+            <i class="fab fa-facebook footer__social" aria-label="Baby Bliss facebook page"></i>
+            <i class="fab fa-twitter footer__social" aria-label="Baby Bliss twitter page"></i>
         </div>
         <div class="footer__info__container">
             <h4>Company & Customer Care</h4>
