--- a/product_details.html
+++ b/product_details.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Product Details">
+    <meta name="description" content="">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
     <link href="css/style.css" rel="stylesheet">
-    <title>Baby Bliss | Product detail</title>
+    <title></title>
 </head>
 
 <body>
@@ -40,22 +40,23 @@
                         <p>Back to all products</p>
                     </a>
                     <div class="message__container"></div>
-                    <div class="product__details__container">
-                        <div class="loading__products"></div>
+                    <div class="loading__products">
+                        <img src="./logo/Stork_SVG.svg" alt="loading symbol"
+                            class="loading__symbol loading__symbol__one">
+                        <img src="./logo/flying_stork.svg" alt="loading symbol"
+                            class="loading__symbol loading__symbol__two">
                     </div>
+                    <div class="product__details__container"></div>
 
                 </div>
             </section>
         </main>
     </div>
     <footer>
-        <div class="footer__logo__container">
-            <a href="index.html"><img src="logo/Logo_svg.svg" alt="Baby Bliss logo" class="footer__logo"></a>
-        </div>
         <div class="footer__social__container">
-            <i class="fab fa-instagram footer__social"></i>
-            <i class="fab fa-facebook footer__social"></i>
-            <i class="fab fa-twitter footer__social"></i>
+            <i class="fab fa-instagram footer__social" aria-label="Baby Bliss instagram page"></i>
+            <i class="fab fa-facebook footer__social" aria-label="Baby Bliss facebook page"></i>
+            <i class="fab fa-twitter footer__social" aria-label="Baby Bliss twitter page"></i>
         </div>
         <div class="footer__info__container">
             <h4>Company & Customer Care</h4>
