--- a/products.html
+++ b/products.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Product page">
+    <meta name="description"
+        content="Here you can see all our products, please enjoy a browse through our large assortment of products. If you are struggling to find the product you are looking for you can filter the products with our searchbar.">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
     <link href="css/style.css" rel="stylesheet">
-    <title>Baby Bliss | Product page</title>
+    <title>Baby Bliss | All products</title>
 </head>
 
 <body>
@@ -37,12 +38,21 @@
             <section class="container">
                 <div class="content__wrapper">
                     <h1>All products </h1>
-                    <div class="filter__container">
-                        <label for="filter">Filter products</label>
-                        <input type="text" name="filter" id="filter" class="filter"
-                            placeholder="Search example: beanie, shoes...">
+                    <div class="filter__grid">
+                        <div class="filter__container">
+                            <label for="filter">Filter products</label>
+                            <input type="text" name="filter" id="filter" class="filter"
+                                placeholder="Search example: beanie, shoes...">
+                        </div>
                     </div>
                     <div class="message__container"></div>
+                    <div class="loading__products">
+                        <img src="./logo/Stork_SVG.svg" alt="loading symbol"
+                            class="loading__symbol loading__symbol__one">
+                        <img src="./logo/flying_stork.svg" alt="loading symbol"
+                            class="loading__symbol loading__symbol__two">
+                    </div>
+                    <div class="filter__message__container"></div>
                     <div class="all__products__grid">
                         <div class="loading__products"></div>
                     </div>
@@ -57,13 +67,10 @@
         </main>
     </div>
     <footer>
-        <div class="footer__logo__container">
-            <a href="index.html"><img src="logo/Logo_svg.svg" alt="Baby Bliss logo" class="footer__logo"></a>
-        </div>
         <div class="footer__social__container">
-            <i class="fab fa-instagram footer__social"></i>
-            <i class="fab fa-facebook footer__social"></i>
-            <i class="fab fa-twitter footer__social"></i>
+            <i class="fab fa-instagram footer__social" aria-label="Baby Bliss instagram page"></i>
+            <i class="fab fa-facebook footer__social" aria-label="Baby Bliss facebook page"></i>
+            <i class="fab fa-twitter footer__social" aria-label="Baby Bliss twitter page"></i>
         </div>
         <div class="footer__info__container">
             <h4>Company & Customer Care</h4>
