--- a/basket.html
+++ b/basket.html
@@ -56,9 +56,22 @@
                                 shopping</span></button></a>
                     <a href=""><button class="standard__cta__btn basket__btn"><span>Checkout</span></button></a>
                 </div>
+                <div class="modal__container">
+                    <div class="modal__content">
+                        <div class="modal__logo"></div>
+                        <hr>
+                        <div class="modal__message"></div>
+                        <div class="basket__btn__container">
+                            <button id="cancel__btn" class="standard__cta__btn edit__btn modal__btn"
+                                aria-label="cancel"><span>Cancel</span></button>
+                            <button id="confirm__btn" class="standard__cta__btn modal__btn"
+                                aria-label="confirm"><span>Confirm</span></button>
+                        </div>
+                    </div>
+                </div>
             </section>
-    </div>
-    </main>
+
+        </main>
     </div>
     <footer>
         <div class="footer__social__container">
