--- a/edit.html
+++ b/edit.html
@@ -67,13 +67,24 @@
                             <div class="price__error"></div>
                         </div>
                         <div class="edit__img__container">
-                            <div class="input__container">
-                                <label for="image">Upload image</label>
-                                <input type="file" name="files.Image" id="image" class="image">
-                                <p class="helper__text">Must be a JPG, JPEG or PNG image. Max 200mb</p>
-                                <div class="image__error"></div>
+                            <label for="image">Upload image</label>
+                            <div class="input__container image__input__container">
+                                <input type="file" name="files" id="image" class="image">
+                                <button type="button" class="verify__btn">
+                                    <div class="verify__image__loader"></div><span class="verify__btn__text">Verify
+                                        image</span>
+                                </button>
+                                <div class="helper__text__container">
+                                    <p class="helper__text">Must be a JPG, JPEG or PNG image. Max 200mb</p>
+                                    <div class="image__error"></div>
+                                </div>
                             </div>
-                            <div class="preview__img__container"></div>
+                            <input type="hidden" id="image__id">
+                            <input type="hidden" id="image__name">
+                            <div class="preview__container">
+                                <div class="preview__img__container"></div>
+                                <div class="preview__new__img__container"></div>
+                            </div>
                         </div>
                         <div class="input__container">
                             <label for="image__alt">Image alternative text</label>
@@ -90,11 +101,25 @@
                         <input type="hidden" name="product__id" id="product__id" class="input__product__id">
                         <div class="basket__btn__container">
                             <button class="standard__cta__btn basket__btn"><span>Complete edit</span></button>
-                            <button class="standard__cta__btn edit__btn basket__btn"><span>Delete
+                            <button type="button" id="delete__product__btn"
+                                class="standard__cta__btn edit__btn basket__btn"><span>Delete
                                     product</span></button>
                         </div>
 
                     </form>
+                </div>
+                <div class="modal__container">
+                    <div class="modal__content">
+                        <div class="modal__logo"></div>
+                        <hr>
+                        <div class="modal__message"></div>
+                        <div class="basket__btn__container">
+                            <button id="cancel__btn" class="standard__cta__btn edit__btn modal__btn"
+                                aria-label="cancel"><span>Cancel</span></button>
+                            <button id="confirm__btn" class="standard__cta__btn modal__btn"
+                                aria-label="confirm"><span>Confirm</span></button>
+                        </div>
+                    </div>
                 </div>
             </section>
         </main>
