--- a/product_details.html
+++ b/product_details.html
@@ -49,7 +49,25 @@
                     <div class="product__details__container"></div>
 
                 </div>
+                <div class="image__modal__container">
+                    <div class="close"><i class="fas fa-times close__btn"></i></div>
+                    <img class="image__modal">
+                </div>
+                <div class="modal__container">
+                    <div class="modal__content">
+                        <div class="modal__logo"></div>
+                        <hr>
+                        <div class="modal__message"></div>
+                        <div class="basket__btn__container">
+                            <button id="cancel__btn" class="standard__cta__btn edit__btn modal__btn"
+                                aria-label="cancel"><span>Cancel</span></button>
+                            <button id="confirm__btn" class="standard__cta__btn modal__btn"
+                                aria-label="confirm"><span>Confirm</span></button>
+                        </div>
+                    </div>
+                </div>
             </section>
+
         </main>
     </div>
     <footer>
