--- a/edit.html
+++ b/edit.html
@@ -75,7 +75,8 @@
                                         image</span>
                                 </button>
                                 <div class="helper__text__container">
-                                    <p class="helper__text">Must be a JPG, JPEG or PNG image. Max 200mb</p>
+                                    <p class="helper__text">Must be a JPG, JPEG or PNG image. Max 200mb. Remember to
+                                        verify image before completing edit</p>
                                     <div class="image__error"></div>
                                 </div>
                             </div>
