--- a/products.html
+++ b/products.html
@@ -9,7 +9,19 @@
         content="Here you can see all our products, please enjoy a browse through our large assortment of products. If you are struggling to find the product you are looking for you can filter the products with our searchbar.">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
+    <link rel="icon" href="logo/Stork_SVG.svg" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
+    <!-- Hotjar Tracking Code for https://babyblissoerjanberger.netlify.app/ -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 2972811, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
     <title>Baby Bliss | All products</title>
 </head>
 
