--- a/favorites.html
+++ b/favorites.html
@@ -9,7 +9,7 @@
         content="Here you can see all the products you have marked as favorites. You can also remove the products from your favorites">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
-    <link rel="icon" href="logo/Stork_SVG.svg" type="image/x-icon">
+    <link rel="icon" href="logo/webicon__logo.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for https://babyblissoerjanberger.netlify.app/ -->
     <script>
