--- a/products.html
+++ b/products.html
@@ -9,7 +9,7 @@
         content="Here you can see all our products, please enjoy a browse through our large assortment of products. If you are struggling to find the product you are looking for you can filter the products with our searchbar.">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
-    <link rel="icon" href="logo/Stork_SVG.svg" type="image/x-icon">
+    <link rel="icon" href="logo/webicon__logo.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for https://babyblissoerjanberger.netlify.app/ -->
     <script>
