--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <meta name="description" content="This is the about us page. Here I explain the reason for making this website">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
-    <link rel="icon" href="logo/Stork_SVG.svg" type="image/x-icon">
+    <link rel="icon" href="logo/webicon__logo.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for https://babyblissoerjanberger.netlify.app/ -->
     <script>
