--- a/basket.html
+++ b/basket.html
@@ -9,7 +9,7 @@
         content="This is your basket. Here you can see what products you have put in your basket and have yet to complete checkout on">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
-    <link rel="icon" href="logo/Stork_SVG.svg" type="image/x-icon">
+    <link rel="icon" href="logo/webicon__logo.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for https://babyblissoerjanberger.netlify.app/ -->
     <script>
