--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="Welcome to Baby Bliss, an up and coming baby accessories online boutique. We have all you need for the next baby shower or baby birthday.">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
-    <link rel="icon" href="logo/Stork_SVG.svg" type="image/x-icon">
+    <link rel="icon" href="logo/webicon__logo.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
     <!-- Hotjar Tracking Code for https://babyblissoerjanberger.netlify.app/ -->
     <script>
