updated small issue found by user testing
Error message showing on wrong time after search
All products button not always working for mobile users

--- a/index.html
+++ b/index.html
@@ -61,9 +61,11 @@
                 </div>
                 <div class="featured__message__container"></div>
                 <div class="all__products__btn__container">
-                    <a href="products.html" class="all__products__link__container">
-                        <p>View all products</p> <img src="./logo/Stork_SVG.svg" alt="Babybliss stork logo"
-                            class="logo__btn">
+                    <a href="products.html">
+                        <button class="all__products__link__container">
+                            <p>View all products</p> <img src="./logo/Stork_SVG.svg" alt="Babybliss stork logo"
+                                class="logo__btn">
+                        </button>
                     </a>
                 </div>
                 <div class="modal__container">
