--- a/search.html
+++ b/search.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="Here you can see all our products, please enjoy a browse through our large assortment of products. If you are struggling to find the product you are looking for you can filter the products with our searchbar.">
+    <meta name="description" content="">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
     <link rel="icon" href="logo/webicon__logo.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
-    <title>Baby Bliss | All products</title>
+    <title></title>
 </head>
 
 <body>
@@ -40,21 +39,8 @@
             <section class="container">
                 <div class="content__wrapper">
                     <div class="heading__container">
-                        <h1>All products </h1>
-                        <div class="filter__grid">
-                            <form action="search.html?search=" class="filter__form">
-                                <label for="filter">Filter products</label>
-                                <div class="filter__input">
-                                    <input type="search" name="search" id="search" class="search"
-                                        placeholder="Search example: beanie, shoes...">
-                                    <div class="filter__btn__container">
-                                        <button type="button" class="filter__btn" name="filterBtn"><i
-                                                class="fas fa-search"></i></button>
-                                    </div>
-                                </div>
-
-                            </form>
-                        </div>
+                        <h1>Search Results </h1>
+                        <h2 class="filter__content__heading"></h2>
                     </div>
                     <div class="message__container"></div>
                     <div class="all__products__grid">
@@ -65,12 +51,6 @@
                                 class="loading__symbol loading__symbol__two">
                         </div>
                     </div>
-                    <div class="pagination__container">
-                        <i class="fas fa-chevron-left page__arrow" aria-label="Pervious page"></i>
-                        <div class="pages__container"></div>
-                        <i class="fas fa-chevron-right page__arrow" aria-label="Next page"></i>
-                    </div>
-                    <div class="pagination__message__container"></div>
                 </div>
                 <div class="modal__container">
                     <div class="modal__content">
@@ -97,7 +77,7 @@
         </div>
         <p>Copyright &copy; 2022 BabyBliss. All rights reserved</p>
     </footer>
-    <script src="js/products.js" type="module"></script>
+    <script src="js/search.js" type="module"></script>
 </body>
 
 </html>
