--- a/search.html
+++ b/search.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Search results">
     <script src="https://kit.fontawesome.com/591f5bf3d7.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://use.typekit.net/ufr7cbx.css">
     <link rel="icon" href="logo/webicon__logo.png" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet">
-    <title></title>
+    <title>Baby Bliss || Search results</title>
 </head>
 
 <body>
@@ -43,13 +43,13 @@
                         <h2 class="filter__content__heading"></h2>
                     </div>
                     <div class="message__container"></div>
+                    <div class="loading__products">
+                        <img src="./logo/Stork_SVG.svg" alt="loading symbol"
+                            class="loading__symbol loading__symbol__one">
+                        <img src="./logo/flying_stork.svg" alt="loading symbol"
+                            class="loading__symbol loading__symbol__two">
+                    </div>
                     <div class="all__products__grid">
-                        <div class="loading__products">
-                            <img src="./logo/Stork_SVG.svg" alt="loading symbol"
-                                class="loading__symbol loading__symbol__one">
-                            <img src="./logo/flying_stork.svg" alt="loading symbol"
-                                class="loading__symbol loading__symbol__two">
-                        </div>
                     </div>
                 </div>
                 <div class="modal__container">
